--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     font-size: 15px;
     line-height: 1.6;
     font-family: mr_LowRiderBBG, regular;
+    src: local(mr_LowRiderBBG), url(../fonts/17309.otf);
     color: black;
     background-color: #edeef0;
     
@@ -21,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Container */
 .container {
-    width: 1920px;
+    width: 100%;
     height: 1080px;
     margin: 0 auto;
 }
